[tool.poetry]
name = "testingactions"
version = "0.1.0"
description = ""
authors = ["sertemo <tejedor.moreno@gmail.com>"]
readme = "README.md"
packages = [{include = "testingactions", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"
tox = "^4.12.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
