[tool.poetry]
name = "testingactions"
version = "0.1.0"
description = ""
authors = ["sertemo <tejedor.moreno@gmail.com>"]
readme = "README.md"
packages = [{include = "testingactions", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"
tox = "^4.12.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# A침adimos configuraci칩n de pytest
[tool.pytest.ini_options]
addopts = "--cov=testingactions"
testpaths = [
    "tests",
]

# A침adimos configuraci칩n de mypy
[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true



